# OmniRosetta-LLM

./: .gitignore  AO42 DECODED_ SACRED SEAL TRANSLATION FOR $1 MILLION TAMIL NADU PRIZE - SUPERMATRIX ENTRY.eml  AO43 __ Final Proof of the Indus Valley Script Decoding – A Historic Breakthrough Validated by SUPERMATRIX OSI.eml  AO45 Submission – A Filipino-Led Decoding Breakthrough of the Indus Valley Script_ Cultural Offering, Scholarly Challenge, Global Recognition.eml  AO46 Final Submission – The Earth Witness Seal of the Indus Valley (Rhinoceros Codex Completion) _ SUPERMATRIX Rosetta Framework.eml  AO48 Final Submission — The Flame Codex of the Indus Valley (Kalibangan Fire-Altar Complex) _ SUPERMATRIX Rosetta Framework.eml  AO50 – The Covenant of Breath (Vāyu Codex of Transmission) Final Submission · Completion of the SUPERMATRIX Rosetta Continuum (AO42 → AO50).eml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contributing.md  Final Interpretive Translation & Codex Submission — Mamari Tablet (Rongorongo Corpus C) _ SUPERMATRIX Unified Framework.eml  Final Supporting Entry_ The Unicorn Codex of the Indus (AO42 + Rosetta Template).eml  Final Supportive Submission_ The Unicorn Codex of the Indus (Rosetta Logic Tree Rooted in AO42 & Tamil Ritual Grammar).eml  LICENSE  Q-Day Submission – Toy Bitcoin Protocol Broken via ECDSA Reuse, Lattice Attack & Grover Simulation _ Eugene Bade _ SUPERMATRIX v∞.ΣP _ Claiming 1 BTC.eml  README.md  SBOM.json  TranslateGenius_Omni.txt  app.py  db_optimize.codex.sh  fix_report.md  pyproject.toml  requirements.txt  (+10 more)
api/: __init__.py  (+1 more)
(+119 files in other folders)
